--- a/css/style.css
+++ b/css/style.css
@@ -340,4 +340,15 @@ body{
     padding-top: 52px;
   }
 }
+.section{
+  padding: 34px 0;  /* antes estava 26px */
+}
+
+@media (max-width: 520px){
+  .section{
+    padding: 30px 0;
+  }
+}
+
+
 
